main commit trabajo 5

--- a/html y css/ejercicio 5 multimedia/html/index.html
+++ b/html y css/ejercicio 5 multimedia/html/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Disposición de elementos en CSS</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+        <img class="imagen-principal" src="../multimedia/2022011012593130752.jpg" alt="imagen-principal" />
+    <div class="galeria">
+        <img class="imagen-galeria" src="../multimedia/descarga (1).jfif" alt="imagen1" />
+        <img class="imagen-galeria" src="../multimedia/descarga (2).jfif" alt="imagen2" />
+        <img class="imagen-galeria" src="../multimedia/descarga (3).jfif" alt="imagen3" />
+        <img class="imagen-galeria" src="../multimedia/descarga.jfif" alt="imagen4" />
+        <img class="imagen-galeria" src="../multimedia/images.jfif" alt="imagen5" />
+        
+    </div>
 </body>
 </html>
